--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -61,6 +61,8 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  column-gap: 20px;
+  row-gap: 20px;
   max-width: 1200px;
 }
 
