README modified before deploying app to Vercel

--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -102,3 +102,37 @@
     flex-direction: column;
   }
 }
+
+.header_container{
+	margin-bottom: 6rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.header_container h1{
+	font-size: 64px;
+  font-weight: bold;
+}
+
+
+.header_container h1 span{
+	background: linear-gradient(140deg, rgba(54,190,255,1) 0%, rgba(115,63,241,1) 100%);
+	background-clip: text;
+	color: transparent;
+}
+
+.header_container p{
+	font-size: 20px;
+  font-weight: bold;
+}
+
+.header_container p span{
+	color: #D73719;
+	width: 197px;
+	height: 36px;
+	background: rgba(255, 255, 255, 0.08);
+	border-radius: 8px;
+	padding: .5rem 1rem .5rem .5rem;
+	margin-left: .3rem;
+}
